More even pagination area size in bp-default. Also reduce width by 1px to prevent overlapping the sidebar border.
git-svn-id: https://buddypress.svn.wordpress.org/trunk@3781 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-themes/bp-default/_inc/css/default.css
+++ b/bp-themes/bp-default/_inc/css/default.css
@@ -803,12 +803,12 @@ div.dir-search input[type=text] {
 -------------------------------------------------------------- */
 
 div.pagination {
-	margin: -20px -20px 9px -20px;
+	margin: -20px -19px 9px -20px;
 	border-bottom: 1px solid #eaeaea;
 	padding: 10px 20px 10px 20px;
 	color: #888;
 	font-size: 11px;
-	height: 16px;
+	height: 19px;
 }
 
 div.pagination#user-pag,
